--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,10 @@
 <html>
     <head>
         <script src="../lib/p5.js"></script>
+        <script src="../lib/addons/p5.dom.js"></script>
+        <script src="../lib/addons/p5.sound.js"></script>
         <script src="index.js"></script>
+        <script src="MatrixNode.js"></script>
         <script src="point_behaviour.js"></script>
     </head>
     <body>
